samples/_failures_safe/1761311065_255f9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0bbb32f.c: In function ‘main’:
./samples/SAFE/__tmp_e0bbb32f.c:158:17: error: expected expression at end of input
  158 |                 if (status ==
      |                 ^~
./samples/SAFE/__tmp_e0bbb32f.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e0bbb32f.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e0bbb32f.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e0bbb32f.c:158:17: error: expected declaration or statement at end of input
